Fix CSS formatting and add text-align to html

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ p{
     line-height:1.6;
 }
 html{
+    text-align:center;
     background-color:lavender;
     font-family:Arial, sans-serif;
     
@@ -21,4 +22,5 @@ img{
 h2{
     color:slateblue;
     font-size:28px;
+
 }
